src/test/deca/codegen/invalid/cast_null_on_int.deca
// Test cast null on int
// Incompatible cast boolean to int

{
    if ((int)(true) instanceof int ){
        println("cast boolean to int");
    } 
}